# project

./: .env  Cargo.toml  build.rs  project.wxs  tray-example.rc  你说得对，但是Rust是
.fleet/: run.json
design/: main.ai
design/icon/: p-layer.ai
src/: FileLib.rs  RequestLib.rs  env.rs  file_lib.rs  json.rs  main.rs  musicplayer.rs  request_lib.rs  slinttrait.rs  structs.rs  tray_item.rs  ultis.rs
src/assets/audios/: per
src/slint/: Login.slint  MusicLib.slint  SideBar.slint  card.slint  homepage.slint  list.slint  main.slint  playlist.slint  setting.slint  settinng.slint  user.slint
src/ui/: mod.rs
src/ui/call_backs/main_call_backs/: mod.rs
src/ui/call_backs/messages_call_backs/: mod.rs
src/ui/call_backs/music_call_backs/: mod.rs
src/ui/per_ready/: mod.rs
