[package]
name = "p-layer"
#build = "build.rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
rodio = "0.17.1"
slint = "1.1.1"
tray-item = "*"
#native-windows-gui = "1.0.12"
#native-windows-derive = "1.0.3" # Optional. Only if the derive macro is used.
#winapi = { version = "0.3", features = ["winuser", "consoleapi"] }
#embed-resource = "2.2.0"
reqwest = { version = "0.11.11", features = ["json", "cookies"] }
open = "5.0.0"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#device_query = "1.1.3"
regex="*"
#systray="*"
futures = "0.3"
rfd="*"
eval = "0.4.3"
dotenv = "0.15.0"
image="*"
[target.'cfg(windows)'.build-dependencies]
dotenv = "0.15"
windres = "*"
slint-build = "1.1.1"
[build]
run = "dotenv::dotenv().ok();"
